esto es una segunda prueba, para que quede mas claro

--- a/ejemplo.ipynb
+++ b/ejemplo.ipynb
@@ -62,6 +62,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "esta es una prueba de cambio\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('esta es una prueba de cambio')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
